--- a/fontend/src/components/footer/Footer.css
+++ b/fontend/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: rgb(220, 250, 255);
-    margin: 4px 10px 10px 10px;
+    background-color: rgb(200, 255, 255);
+    margin-top: 15px;
     padding: 15px;
 }
