--- a/fontend/src/App.css
+++ b/fontend/src/App.css
@@ -1,5 +1,6 @@
 .body {
-    background-color: rgb(248, 255, 255);
+    background-color: rgb(240, 255, 255);
     font-family: Bahnschrift;
-    color: rgb(111, 111, 111);
+    color: rgb(131, 131, 131);
+    margin: 0px;
 }
