--- a/fontend/src/components/navbar/NavBar.css
+++ b/fontend/src/components/navbar/NavBar.css
@@ -28,7 +28,7 @@
 
 /*
 ============================================================================================================================
-                                             Menu items
+                                             Menu items - ul, li
 ============================================================================================================================
 */
 
@@ -45,22 +45,34 @@
     list-style: none;
     display: flex;
     align-items: center;
-    /*gap: 1rem;*/
+    gap: 4px;
 }
 
+/* List items and projects button */
 .navbar-links li a,
 .dropdown-toggle {
     color: rgb(130, 130, 130);
     text-decoration: none;
-    padding: 0.5rem;
+    padding: 12px;
     display: block;
+    border: none;
+    background-color: rgb(200, 255, 255);
+    font-family: Bahnschrift;
+    font-size: 15px;
 }
 
 .navbar-links li a:hover,
 .dropdown-toggle:hover {
-    background-color: rgb(171, 220, 220);
+    background-color: rgba(0, 0, 0, 0.044);
     border-radius: 4px;
 }
+
+
+/*
+============================================================================================================================
+                                             Dropdown menu
+============================================================================================================================
+*/
 
 /* Dropdown styling */
 .dropdown {
@@ -70,11 +82,12 @@
 .dropdown-menu {
     display: none;
     position: absolute;
-    background-color: #333;
+    background-color: rgb(255, 255, 255);
     list-style: none;
     margin: 0;
-    padding: 0.5rem 0;
+    padding: 8px 0px;
     border-radius: 4px;
+    border: 1px solid rgb(201, 201, 201);
     top: 100%;
     left: 0;
     min-width: 150px;
@@ -84,10 +97,11 @@
 .dropdown-menu li a {
     padding: 0.5rem 1rem;
     white-space: nowrap;
+    background-color: rgb(255, 255, 255);
 }
 
 .dropdown-menu li a:hover {
-    background-color: #555;
+    background-color: rgba(0, 0, 0, 0.077);
 }
 
 .dropdown-menu.show {
