--- a/fontend/src/components/text-input/TextInput.css
+++ b/fontend/src/components/text-input/TextInput.css
@@ -1,8 +1,7 @@
-text-imput {
+.text-input {
     font-size: 18px;
     border-radius: 8px;
     padding: 6px 12px;
-    width: 80%;        /* preferred width (usually fills container) */
     max-width: 300px;   /* maximum width */
     min-width: 80px;   /* minimal width */
     margin: 15px;
